--- a/header.html
+++ b/header.html
@@ -251,13 +251,13 @@
                     <span class="text-gray-400 hidden sm:inline">|</span>
                     <a href="mailto:dsckarnal@dsckarnal.ac.in" class="hover:text-blue-600 transition-colors">dsckarnal@dsckarnal.ac.in</a>
                     <span class="text-gray-400 hidden sm:inline">|</span>
-                    <a href="/about-us/iqac.html" class="hover:text-blue-600 transition-colors">IQAC</a>
+                    <a href="/header/iqac.html" class="hover:text-blue-600 transition-colors">IQAC</a>
                     <span class="text-gray-400 hidden sm:inline">|</span>
-                    <a href="/about-us/nirf.html" class="hover:text-blue-600 transition-colors">NIRF</a>
+                    <a href="/header/nirf.html" class="hover:text-blue-600 transition-colors">NIRF</a>
                     <span class="text-gray-400 hidden sm:inline">|</span>
-                    <a href="/about-us/rti.html" class="hover:text-blue-600 transition-colors">RTI</a>
+                    <a href="/header/rti.html" class="hover:text-blue-600 transition-colors">RTI</a>
                     <span class="text-gray-400 hidden sm:inline">|</span>
-                    <a href="/about-us/feedback-reports.html" class="hover:text-blue-600 transition-colors">Feedback Reports</a>
+                    <a href="/header/feedback-reports.html" class="hover:text-blue-600 transition-colors">Feedback Reports</a>
                 </div>
             </div>
         </div>
@@ -348,8 +348,8 @@
                                 <svg class="ml-2 h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M5.293 7.293a1 1 0 011.414 0L10 10.586l3.293-3.293a1 1 0 111.414 1.414l-4 4a1 1 0 01-1.414 0l-4-4a1 1 0 010-1.414z" clip-rule="evenodd" /></svg>
                             </button>
                             <div class="dropdown-menu" aria-label="Student's Corner submenu">
-                                <a href="/student-corner/syllabus.html">Syllabus</a>
-                                <a href="/student-corner/examinations.html">Examinations</a>
+                                <a href="/student's-corner/syllabus.html">Syllabus</a>
+                                <a href="/student's-corner/examinations.html">Examinations</a>
                             </div>
                         </div>
 
