--- a/student's-corner/syllabus.html
+++ b/student's-corner/syllabus.html
@@ -137,29 +137,12 @@
 
     <script>
         // Inject Header
-        fetch('header.html')
-            .then(response => response.ok ? response.text() : Promise.reject('Header not found'))
-            .then(data => {
-                document.getElementById('header').innerHTML = data;
-                if (typeof initializeHeaderScripts === 'function') {
-                    initializeHeaderScripts();
-                }
-            })
-            .catch(error => console.error('Error loading header:', error));
-
+        fetch('../header.html').then(r => r.ok ? r.text() : Promise.reject('err')).then(d => { document.getElementById('header').innerHTML = d; if(typeof initializeHeaderScripts === 'function') initializeHeaderScripts(); }).catch(e => console.error('Error loading header:', e));
         // Inject Footer
-        fetch('footer.html')
-            .then(response => response.ok ? response.text() : Promise.reject('Footer not found'))
-            .then(data => {
-                document.getElementById('footer').innerHTML = data;
-                 if (typeof initializeFooterScripts === 'function') {
-                    initializeFooterScripts();
-                }
-            })
-            .catch(error => console.error('Error loading footer:', error));
+        fetch('../footer.html').then(r => r.ok ? r.text() : Promise.reject('err')).then(d => { document.getElementById('footer').innerHTML = d; if(typeof initializeFooterScripts === 'function') initializeFooterScripts(); }).catch(e => console.error('Error loading footer:', e));
     </script>
-    <script src="header-scripts.js" defer></script>
-    <script src="footer-scripts.js" defer></script>
+    <script src="../header-scripts.js" defer></script>
+    <script src="../footer-scripts.js" defer></script>
 
 </body>
 </html>
