Rename home.html to index.html for Vercel deploy

--- a/header.html
+++ b/header.html
@@ -264,7 +264,7 @@
 
         <div class="main-header-content py-4 px-4 md:px-8">
             <div class="container mx-auto flex flex-col md:flex-row items-center justify-between">
-                <a href="/home.html" class="flex items-center space-x-4 mb-4 md:mb-0">
+                <a href="/index.html" class="flex items-center space-x-4 mb-4 md:mb-0">
                     <img src="/images/dsc_logo.png" alt="Dyal Singh College Logo" class="w-24 h-24 object-contain" loading="lazy">
                     <div>
                         <h1 class="college-title font-extrabold">DYAL SINGH COLLEGE, KARNAL</h1>
@@ -295,7 +295,7 @@
             <div class="container mx-auto px-4 md:px-8">
                 <div class="flex items-center justify-between">
                     <div class="hidden lg:flex items-center space-x-8">
-                        <a href="/home.html" class="font-medium hover:text-yellow-300 transition-colors uppercase">Home</a>
+                        <a href="/index.html" class="font-medium hover:text-yellow-300 transition-colors uppercase">index</a>
 
                         <div class="dropdown">
                             <button class="font-medium transition-colors inline-flex items-center uppercase" aria-expanded="false" aria-haspopup="true">
@@ -390,7 +390,7 @@
             </div>
             <div id="mobile-menu" class="hidden lg:hidden bg-blue-900 border-t border-blue-700 mt-2">
                 <div class="px-4 pt-4 pb-6 space-y-4">
-                    <a href="/home.html" class="block text-white hover:text-yellow-300 font-medium uppercase">Home</a>
+                    <a href="/index.html" class="block text-white hover:text-yellow-300 font-medium uppercase">index</a>
                     
                     <div class="dropdown-mobile">
                         <button class="w-full flex justify-between items-center text-white hover:text-yellow-300 font-medium uppercase">
