Integrated Tailwind CSS locally and updated all pages

--- a/about-us/history.html
+++ b/about-us/history.html
@@ -6,7 +6,7 @@
     <title>Our History | Dyal Singh College, Karnal</title>
     <meta name="description" content="Explore the rich history of Dyal Singh College, from the vision of its founder, Sardar Dyal Singh Majithia, to its re-establishment by Dewan Anand Kumar.">
     <meta name="keywords" content="History, Dyal Singh College, Sardar Dyal Singh Majithia, Dewan Anand Kumar, Lahore, Karnal">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
