--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
     <title>Dyal Singh College, Karnal - Header</title>
     <meta name="description" content="Header section for Dyal Singh College, Karnal, including navigation, branding, and news ticker.">
     <meta name="keywords" content="Dyal Singh College, Karnal, NAAC A+, University of Kurukshetra, Higher Education, Header, Navigation">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
