--- a/naac.html
+++ b/naac.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>NAAC | Dyal Singh College, Karnal</title>
     <meta name="description" content="Access NAAC related documents for Dyal Singh College, Karnal, including Peer Team Reports, Self Study Reports (SSR), Annual Quality Assurance Reports (AQAR), and certificates.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
