--- a/about-us/annual-reports.html
+++ b/about-us/annual-reports.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Annual Reports | Dyal Singh College, Karnal</title>
     <meta name="description" content="Download the official annual reports of Dyal Singh College, Karnal, documenting our academic progress, activities, and achievements.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
