--- a/about-us/college-profile.html
+++ b/about-us/college-profile.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>College Profile | Dyal Singh College, Karnal</title>
     <meta name="description" content="Dyal Singh College, Karnal is a premier co-educational centre of learning in Northern India with a rich history and a commitment to academic excellence.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
