--- a/about-us/official-logo.html
+++ b/about-us/official-logo.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Official Logo | Dyal Singh College, Karnal</title>
     <meta name="description" content="The official logo and motto of Dyal Singh College, Karnal, representing our guiding principle: 'From darkness, lead me to the light.'">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Merriweather:ital,wght@1,700&family=Noto+Sans+Devanagari:wght@700&display=swap" rel="stylesheet">
