--- a/about-us/our-motto.html
+++ b/about-us/our-motto.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Our Motto | Dyal Singh College, Karnal</title>
     <meta name="description" content="The motto of Dyal Singh College, Karnal: 'Gather ye the wisdom of the East & the West,' reflecting our commitment to a holistic and global education.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&family=Merriweather:ital,wght@1,700&display=swap" rel="stylesheet">
