--- a/about-us/vision-mission.html
+++ b/about-us/vision-mission.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vision & Mission | Dyal Singh College, Karnal</title>
     <meta name="description" content="The vision and mission of Dyal Singh College, Karnal, focusing on excellence, holistic development, and societal values.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
