--- a/academics/timetable.html
+++ b/academics/timetable.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Time Table | Dyal Singh College, Karnal</title>
     <meta name="description" content="Access the official class timetables for Arts, Science, and Commerce streams at Dyal Singh College, Karnal.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
