--- a/admissions/fee-structure.html
+++ b/admissions/fee-structure.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fee Structure 2025-26 | Dyal Singh College, Karnal</title>
     <meta name="description" content="Detailed fee structure for undergraduate and postgraduate courses at Dyal Singh College, Karnal for the session 2025-26.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
