--- a/admissions/prospectus.html
+++ b/admissions/prospectus.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Prospectus 2024-25 | Dyal Singh College, Karnal</title>
     <meta name="description" content="Download the official Dyal Singh College, Karnal Prospectus for the academic session 2024-25. View admission guidelines, fee structure, and course details.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
