--- a/alumni-corner/alumni-registration.html
+++ b/alumni-corner/alumni-registration.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Alumni Registration | Dyal Singh College, Karnal</title>
     <meta name="description" content="Register with the Dyal Singh College, Karnal Alumni Association to reconnect with classmates, receive updates, and stay involved with your alma mater.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
