--- a/facilities/campus-facilities.html
+++ b/facilities/campus-facilities.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Academic Facilities | Dyal Singh College, Karnal</title>
     <meta name="description" content="Explore the academic infrastructure at Dyal Singh College, Karnal, featuring Smart Classrooms, Advanced Laboratories, Botanical Gardens, and Museums.">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/output.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap" rel="stylesheet">
